# malti

./: Cargo.toml  README.md  app.mjs  build  index.js  package-lock.json  package.json
.github/workflows/: CI.yml
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: db.rs  doc.txt  lib.rs
svelte/: package-lock.json  package.json
svelte/src/lib/: adj.svelte  err.svelte  extra.svelte  generalWord.svelte  load.svelte  nav.svelte  noun.svelte  searchEntry.svelte  verb.svelte  wordInfo.svelte
svelte/src/routes/: +layout.svelte  +page.svelte
svelte/src/routes/about/: +page.svelte
svelte/src/routes/search/: +page.svelte
svelte/src/routes/word/: +page.svelte
